# 2022-ntu-iot-final-project

./: .gitignore  .gitmodules  Makefile  README.md  launch.sh
judge/: pyproject.toml
judge/judge/: __init__.py  config.py  keyboard_control.py  loop.py  main.py  npc.py  obstacle.py  state.py  ui.py  utils.py  vehicle.py  world.py
judge/judge/sensor/: __init__.py  camera_manager.py  collision.py  gnss.py  imu.py  lane_invasion.py  lidar.py  radar.py  rgb_camera.py
launch/: final.launch.xml
src/iot_agent/: package.xml  setup.cfg  setup.py
src/iot_agent/iot_agent/: agent.py  qos.py
